# news-microservices

./: docker-compose.yml
services/gateway/: pyproject.toml
services/likes/: pyproject.toml
services/news/: config.py  main.py  pyproject.toml
services/news/src/application/usecases/: create_post.py  delete_post.py  find_post.py  find_posts.py  update_post.py
services/news/src/application/validators/: create_post.py  update_post.py
services/news/src/domain/: enums.py  exceptions.py  models.py  repositories.py  uow.py  value_objects.py
services/news/src/infrastructure/: database.py  models.py  repositories.py  uow.py
services/news/src/interface/: dependencies.py
services/news/src/presentation/: request.py  routes.py  schemas.py
services/notifications/: alembic.ini  pyproject.toml
services/shared/cases/: exceptions.py
services/shared/interface/: commands.py  queries.py  repositories.py  usecases.py  validator.py
services/shared/kernel/: error.py  error_list.py  errors.py  result.py  validation_result.py
services/users/: config.py  pyproject.toml
services/users/src/infrastructure/: security.py
services/users/src/interface/: dependencies.py
